# icarus_v2

./: .gitignore  CHANGELOG.txt  LICENSE.md  LICENSE.txt  QUESTIONS.txt  README.md  README.txt  SlopeTest.py  TODO.txt  changelog.txt  design.txt  dev_setup.txt  equilibrated_default_settings.json  main.spec  pyproject.toml  required-packages.txt  requirements.txt  saved_equilibrated.json  settings.json  test.py
icarus_v2/: BufferLoader.py  Channel.py  Coefficients.py  ConfigurationManager.py  ControlPanel.py  Counter.py  CounterDisplay.py  CounterPanel.py  DataConverter.py  DataHandler.py  DataRecorder.py  DataRecorderJSON.py  DepressurizeEventPlot.py  DepressurizeHandler.py  DeviceControlPanel.py  Di4108.py  Di4108USB.py  ErrorDialog.py  Event.py  EventHandler.py  EventLoader.py  EventLogger.py  EventPlot.py  HistoryPlot.py  LogControlPanel.py  LogHandler.py  LogReader.py  Logger.py  MainWindow.py  Module.py  PeriodHandler.py  PressureDisplay.py  PressureEventPlot.py  PressureHandler.py  PressurePlot.py  PressurizeEventPlot.py  PressurizeHandler.py  PulseGenerator.py  PumpHandler.py  RawDataLogger.py  (+15 more)
icarus_v2 c++/: Di4108.cpp  Di4108.h  main.cpp
icarus_v2 py/: Di4108.py  Di4108_USB.py  SPMCRingBuffer.py  main.py
icarus_venv/: pyvenv.cfg
logs/: log_2024-04-23_07-37-03.xz  log_2024-04-23_11-49-32.xz  log_2024-04-23_12-03-32.xz  log_2024-04-23_12-06-28.xz  log_2024-04-23_12-12-02.xz  log_2024-04-23_12-20-10.xz  log_2024-04-23_12-53-27.xz
logs/device_test_3/: equilibration.xz  log_2024-05-06_10-04-33.xz  log_2024-05-06_10-12-18.xz  log_2024-05-06_10-25-10.xz
logs/example/: 0_to_2.3kBar.xz  1.5_to_2.3kBar.xz  1.5kBar.xz  1.5kBar_60_and_3_sec_period.xz  2.1_to_1.5kBar.xz  5sec_1.5kBar2.xz  5sec_1.5kBar3.xz  5sec_1.5kBar_shutdown.xz  60_second_period.xz  equilibration_2.3kBar.xz  log_2024-04-29_22-30-46.xz  log_2024-04-30_10-06-37.xz  log_2024-04-30_10-07-26.xz  log_2024-04-30_10-14-33.xz  log_2024-04-30_10-15-34.xz  log_2024-04-30_10-25-15.xz  log_2024-04-30_10-41-37.xz  log_2024-04-30_11-20-08.xz
logs/raw/: 5sec_1.5kBar3.xz  log_2024-07-19_18-19-00.xz
raw_logs/: log_2024-04-23_08-19-56.xz  log_2024-04-23_12-03-32.xz  log_2024-04-23_12-53-27.xz
reference/: config.ini  dataq_base.cpp  dataq_base.h  dataq_usb.cpp  dataq_usb.h  main.cpp
setup/: generate_default_settings.py  install_udev_rules.sh
setup/udev_rules/: 70-dataq-di-4108.rules
src/: BufferLoader.py  ConfigurationManager.py  CounterDisplay.py  DataHandler.py  DeviceControlPanel.py  Di4108USB.py  ErrorDialog.py  Event.py  EventPlot.py  HistoryPlot.py  LogControlPanel.py  LogReader.py  Logger.py  MainWindow.py  PressureHandler.py  PressurizeHandler.py  PumpHandler.py  RawLogReader.py  SPMCRingBuffer.py  SampleSensorDetector.py  Sentry.py  SettingsDialog.py  SlopeTest.py  StyledPlotWidget.py  ToggleButton.py  TogglePictureButton.py  ToolBar.py  _color.py  color_class.py  hsla_class.py  load_style.py  main.py  path_utils.py  rgba_class.py  svg_class.py
src/icarus_v2/: __main__.py
src/icarus_v2/backend/: buffer_loader.py  configuration_manager.py  csv_exporter.py  custom_csv_exporter.py  data_handler.py  dataq_interface.py  depressurize_handler.py  (+16 more)
(+28 files in other folders)
