[tool.poetry]
name = "icarus_v2"
version = "0.1.6"
description = "Monitoring software for the Icarus Pressure Jump apparatus"
authors = ["Sean Fitch <fitchs2@rpi.edu>"]
readme = "README.md"
repository = "https://github.com/SeanIFitch/icarus_v2"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering",
]
packages = [
    { include = "icarus_v2", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^2.1"
pyqtgraph = "^0.13"
PySide6 = "~6.7"
PySide6_Addons = "~6.7"
PySide6_Essentials = "~6.7"
pyusb = "^1.2"
shiboken6 = "~6.7"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/SeanIFitch/icarus_v2/issues"

[tool.poetry.scripts]
icarus = "icarus_v2.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
